<resources>
    <string name="app_name">SunmiService</string>
    <string name="str_copy_link">Copy the link</string>
    <string name="tip_copy_success">Copy successfully</string>
    <string name="title_share_page">No mortgage required, 15 minutes loan RMB 3 million!</string>
    <string name="description_share_page">Small Business Loans - just as fast as you hope!</string>
    <string name="str_share_to">Share to</string>
    <string name="tip_wechat_not_installed">The APP of WeChat is not installed</string>
    <string name="str_text_share">Share</string>
    <string name="str_text_edit_sharing_content">Edit sharing content</string>
    <string name="str_text_follow_official_weibo">Follow the official blogs</string>
    <string name="str_renewal">续订</string>

    <string name="tip_device_unbind">原绑定设备已解绑</string>
    <string name="tip_not_open_cloud">您尚未开通云存储服务</string>
    <string name="service_go_open">去开通</string>
    <string name="str_service_detail">Service Details</string>
    <string name="service_device_name">Device Name</string>
    <string name="service_device_model">Device Model</string>
    <string name="service_device_sn">Device SN</string>
    <string name="service_order_info">Order Info</string>
    <string name="service_subscribe_time">Subscribed at</string>
    <string name="service_expire_time">Valid To</string>
    <string name="service_remaining">Remaining Validity</string>
    <string name="service_number">Service No</string>
    <string name="service_order_number">Associated Order No</string>
    <string name="tip_cloud_storage">Store videos on cloud for easy playback.</string>
    <string name="str_after_sales">售后</string>
    <string name="str_after_sales_service">售后服务</string>
    <string name="tip_after_sales">快速申请保修、查询维修网点和配件价格</string>
    <string name="str_apply_repair">申请报修</string>
    <string name="str_sunmi_store">商城</string>
    <string name="str_sunmi_store_service">耗材采购</string>
    <string name="tip_sunmi_store">更多配为您随时准备</string>
    <string name="str_enter_store">进入商城</string>
    <string name="tip_renewal_less_three_days">云存储服务剩余有效期小于3天才可续费，请确认后重试</string>
    <string name="str_promotion">推广</string>
    <string name="str_unbind">已解绑</string>
    <string name="tip_cash_video">帮您更高效便捷地校验异常收银视频</string>
    <string name="str_renew_cloud_storage">续订云存储</string>
    <string name="str_qingtuan_recruit">招聘</string>
    <string name="service_tip_cash_loss_prevent">AI智能识别异常风险，为收银环节保驾护航</string>
    <string name="str_commerce_bank">网商银行</string>
    <string name="str_borrow_money">去借钱</string>
    <string name="str_tip_commerce_bank">扶持商户共渡难关，最高可贷100万元</string>
    <string name="str_fight_outbreak">抗击疫情</string>
    <string name="str_install_now">立即安装</string>
    <string name="dialog_title_install_alipay">此服务需安装支付宝客户端，请安装后重试。</string>
    <string name="dialog_title_install_dingding">尚未安装钉钉，无法观看直播，请安装后重试。</string>
    <string name="str_watch_course">观看课程</string>
    <string name="sunmi_business_school">商米商学院</string>
    <string name="str_watch_online_course">与商家一起修炼内功，助力门店转型升级</string>
    <string name="str_online_course">在线课程</string>

</resources>
